code/tui/snapshots/fullscreen/network/network_diagnostics_back_to_config.snap
---
source: code/tui/src/app/network_tests.rs
expression: "render(&app, 100, 24)"
---
  .                                                                                    [Dashboard]

            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │   General    Providers    Issues    Network                             │
            │                                                                         │
            │  ╭────────────────────────────────────────────────────────────────────╮ │
            │  │ Search configuration                                               │ │
            │  ╰────────────────────────────────────────────────────────────────────╯ │
            │> Run network diagnostics                                                │
            │  Required domains                                                       │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter/Space change · Tab tabs · / search · Esc close
