code/tui/snapshots/fullscreen/network/network_diagnostics_loading.snap
---
source: code/tui/src/app/network_tests.rs
expression: "render(&app, 100, 24)"
---
  .                                                                                    [Dashboard]

            ┌── Config › Network ─────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │> Checking configured services…                                          │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return
